clean up before lecture

--- a/11_Nov/1504_熱機関とその効率.ipynb
+++ b/11_Nov/1504_熱機関とその効率.ipynb
@@ -6,7 +6,7 @@
       "name": "1504_熱機関とその効率.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMgMbrFFFnTPY6kQ3T0BO9f",
+      "authorship_tag": "ABX9TyNn9ENBXSIEh7jU2SVBWU0W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "YVSeq1OIaN33",
         "cellView": "form",
-        "outputId": "6afdd06f-63f2-4f55-b56e-3cc5a155a0a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "6afdd06f-63f2-4f55-b56e-3cc5a155a0a1"
       },
       "source": [
         "#@title (ガラス)蒸気機関\n",
@@ -91,11 +91,11 @@
       "metadata": {
         "id": "nKmtuMZmsLqA",
         "cellView": "form",
-        "outputId": "2c4adc99-f610-468c-c87b-4028d9f12c1e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "2c4adc99-f610-468c-c87b-4028d9f12c1e"
       },
       "source": [
         "#@title 産業革命を支えた蒸気機関\n",
@@ -125,11 +125,11 @@
       "metadata": {
         "id": "qoRRR48CqC2G",
         "cellView": "form",
-        "outputId": "e6f05ae8-7c35-4004-f880-bd18931690b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "e6f05ae8-7c35-4004-f880-bd18931690b0"
       },
       "source": [
         "#@title SL: steam locomotion\n",
@@ -159,11 +159,11 @@
       "metadata": {
         "id": "J-6OINgaWPdf",
         "cellView": "form",
-        "outputId": "ddf3adb2-0523-456f-c8ea-3cdebfcdcb46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
-        }
+        },
+        "outputId": "ddf3adb2-0523-456f-c8ea-3cdebfcdcb46"
       },
       "source": [
         "#@title 循環過程(サイクル)\n",
@@ -269,11 +269,11 @@
       "metadata": {
         "id": "Di_63ShGRY7U",
         "cellView": "form",
-        "outputId": "7ed2dc90-f2e6-4f64-a1ae-d7016d5438ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "7ed2dc90-f2e6-4f64-a1ae-d7016d5438ad"
       },
       "source": [
         "#@title カルノーサイクルの動画(その1)\n",
@@ -327,11 +327,11 @@
       "metadata": {
         "id": "JznYSq9xuB4_",
         "cellView": "form",
-        "outputId": "858ff154-5e84-4f0b-c0e7-6a32f5adebbd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 527
-        }
+        },
+        "outputId": "858ff154-5e84-4f0b-c0e7-6a32f5adebbd"
       },
       "source": [
         "#@title 簡略化されたカルノーサイクル\n",
@@ -483,9 +483,16 @@
         "&\\begin{cases}\n",
         "T_{H}V_{2}^{\\gamma-1} &= T_{L}V_{3}^{\\gamma-1} \\quad : \\text{at B and C}\\\\[2mm]\n",
         "T_{H}V_{1}^{\\gamma-1} &= T_{L}V_{4}^{\\gamma-1} \\quad : \\text{at D and A}\n",
-        "\\end{cases}\\\\[1mm]\n",
+        "\\end{cases}\n",
+        "\\end{align}\n",
+        "上段の式と下段の式を辺々の商を取ると\n",
+        "\\begin{align}\n",
         "\\dfrac{V_{2}^{\\gamma-1}}{V_{1}^{\\gamma-1}}\n",
         "&=\\dfrac{V_{3}^{\\gamma-1}}{V_{4}^{\\gamma-1}}\\\\[2mm]\n",
+        "{}^{\\gamma-1}\\sqrt{\\left(\\dfrac{V_{2}}{V_{1}}\\right)^{\\gamma-1}}\n",
+        "&=\n",
+        "{}^{\\gamma-1}\\sqrt{\n",
+        "\\left(\\dfrac{V_{3}}{V_{4}}\\right)^{\\gamma-1}}\\\\[2mm]\n",
         "\\dfrac{V_{2}}{V_{1}}\n",
         "&=\\dfrac{V_{3}}{V_{4}}\n",
         "\\end{align}\n"
@@ -519,11 +526,11 @@
       "metadata": {
         "id": "8e5J906iZZCU",
         "cellView": "form",
-        "outputId": "f08dec9d-108b-4563-e54c-602386799996",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
-        }
+        },
+        "outputId": "f08dec9d-108b-4563-e54c-602386799996"
       },
       "source": [
         "#@title カルノーサイクルの描画\n",
@@ -591,9 +598,15 @@
         "\\begin{align*}\n",
         "\\eta &= \\dfrac{Q_{\\rm H} -Q_{\\rm L}}{Q_{\\rm H}} \n",
         "= \\dfrac{\\cancel{R}\\left( T_{\\rm H}  - T_{\\rm L} \\right) \\bcancel{\\ln \\dfrac{V_2}{V_1}}}\n",
-        "{\\cancel{R} T_{\\rm H} \\bcancel{\\ln \\dfrac{V_2}{V_1}}}\\\\[2mm]\n",
-        "\\eta &= \\dfrac{T_{\\rm H} -T_{\\rm L}}{T_{\\rm H}} \n",
-        "\\end{align*}"
+        "{\\cancel{R} T_{\\rm H} \\bcancel{\\ln \\dfrac{V_2}{V_1}}}\n",
+        "= \\dfrac{T_{\\rm H} -T_{\\rm L}}{T_{\\rm H}} &\\\\[1mm]\n",
+        "%\n",
+        "&=1 - \\dfrac{Q_{\\rm L}}{Q_{\\rm H}} \n",
+        "=1 - \\dfrac{T_{\\rm L}}{T_{\\rm H}} \\\\[3mm]\n",
+        "\\dfrac{Q_{\\rm L}}{Q_{\\rm H}} \n",
+        "&=\n",
+        "\\dfrac{T_{\\rm L}}{T_{\\rm H}} \n",
+        "\\end{align*}\n"
       ]
     },
     {
@@ -619,11 +632,11 @@
       "metadata": {
         "id": "EbFH2lwexZ_f",
         "cellView": "form",
-        "outputId": "e6687d37-7b90-487e-bec9-4a58980b7424",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
-        }
+        },
+        "outputId": "e6687d37-7b90-487e-bec9-4a58980b7424"
       },
       "source": [
         "#@title ideal combined cycle\n",
@@ -651,11 +664,11 @@
       "metadata": {
         "id": "qexQoE5serYD",
         "cellView": "form",
-        "outputId": "7d00b1e8-484d-44ba-b611-01686a11c991",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
-        }
+        },
+        "outputId": "7d00b1e8-484d-44ba-b611-01686a11c991"
       },
       "source": [
         "#@title 模式図:トムソンの原理\n",
@@ -688,6 +701,19 @@
         "W' -  W & \\bcancel{>} 0\\\\[2mm]\n",
         "W' -  W & \\leqq 0\\\\[3mm]\n",
         "W' & \\leqq W\n",
+        "\\end{align*}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h8BMrwwuM8bR"
+      },
+      "source": [
+        "\\begin{align*}\n",
+        "W' & \\leqq W\\\\\n",
+        "\\dfrac{W'}{Q_2} &\\leqq \\dfrac{W}{Q_2} \\\\\n",
+        "\\dfrac{Q_2 - Q'_1 }{Q_2} &\\leqq \\dfrac{Q_2 - Q_1}{Q_2} = \\dfrac{T_2 - T_1}{T_2}  \\\\\n",
         "\\end{align*}"
       ]
     },
@@ -747,11 +773,11 @@
       "metadata": {
         "id": "lnqrM5_IZhqC",
         "cellView": "form",
-        "outputId": "8e71bed2-a9d1-4ff6-8cb7-450ab0954951",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
-        }
+        },
+        "outputId": "8e71bed2-a9d1-4ff6-8cb7-450ab0954951"
       },
       "source": [
         "#@title How 4-Stroke Gasoline Engines Work! (Otto cycle)\n",
@@ -1044,11 +1070,11 @@
       "metadata": {
         "id": "L4ruWvDbCg6D",
         "cellView": "form",
-        "outputId": "eb63fef7-40dd-4b1a-abab-140bb90944fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 342
-        }
+        },
+        "outputId": "eb63fef7-40dd-4b1a-abab-140bb90944fc"
       },
       "source": [
         "#@title 逆(カルノー)サイクル\n",
@@ -1088,8 +1114,24 @@
       "source": [
         "与えた仕事 $W$で, 熱量 $Q_1=Q_{\\rm L}$ 熱を吸い上げるのが目的なので, 性能効率は\n",
         "\\begin{align}\n",
-        "\\dfrac{Q_{\\rm L}}{W} = \\dfrac{Q_{\\rm L}}{Q_{\\rm H} -Q_{\\rm L}} \\leqq \\dfrac{T_{\\rm L}}{T_{\\rm H}-T_{\\rm L}}\n",
+        "\\dfrac{Q_{\\rm L}}{W} = \\dfrac{Q_{\\rm L}}{Q_{\\rm H} -Q_{\\rm L}} \n",
+        "\\leqq \\dfrac{T_{\\rm L}}{T_{\\rm H}-T_{\\rm L}}\n",
         "\\end{align}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-66WTp3LKlIC"
+      },
+      "source": [
+        "<!-- http://fnorio.com/0106heat_engine(refrigeration_cycle)1/heat_engine(refrigeration_cycle)1.htm#3 -->\n",
+        "\\begin{align}\n",
+        "\\dfrac{Q_{\\rm L}}{W}\n",
+        "= \\dfrac{1}{\\dfrac{Q_{\\rm H}}{Q_{\\rm L}} -1}\n",
+        "= \\dfrac{1}{\\dfrac{T_{\\rm H}}{T_{\\rm L}} -1}\n",
+        "= \\dfrac{T_{\\rm L}}{T_{\\rm H}-T_{\\rm L}}\n",
+        "\\end{align}"
       ]
     },
     {
