clean up after lecture

--- a/11_Nov/1505_エントロピー増大の原理.ipynb
+++ b/11_Nov/1505_エントロピー増大の原理.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1505_エントロピー増大の原理.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyM0KEliKxBc+FkwvzDsHtNS",
+      "authorship_tag": "ABX9TyPdi0sfT7MSDkofCE6CVQz5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,9 +139,9 @@
         "\\begin{align}\n",
         "S_{\\rm C} &=\n",
         "\\begin{cases}\n",
-        "S_{\\rm A} + \\dfrac{Q_{\\rm H}}{T_{\\rm H}}\n",
-        "&=S_{\\rm A} + \\dfrac{Q_{\\rm 1}}{T_{\\rm 1}}\\\\\n",
-        "S_{\\rm A} + \\dfrac{(-Q_{\\rm L})}{T_{\\rm L}}\n",
+        "S_{\\rm A} + \\dfrac{Q_{\\rm H}}{T_{\\rm H}} + \\dfrac{0}{T}\n",
+        "&=S_{\\rm A} + \\dfrac{Q_{\\rm 1}}{T_{\\rm 1}} \\\\\n",
+        "S_{\\rm A} + \\dfrac{0}{T}+\\dfrac{(-Q_{\\rm L})}{T_{\\rm L}}\n",
         "&=S_{\\rm A} + \\dfrac{Q_{\\rm 2}}{T_{\\rm 2}}\\\\\n",
         "\\end{cases}\\\\\n",
         "S_{\\rm C} - S_{\\rm A}&=\\dfrac{Q_{\\rm 1}}{T_{\\rm 1}}=\\dfrac{Q_{\\rm 2}}{T_{\\rm 2}}\n",
@@ -208,9 +207,11 @@
           "height": 336
         },
         "id": "wDW6ezb6e5yl",
+        "cellView": "form",
         "outputId": "2ea9c9f4-f5cf-4c2b-eb3e-b85cdc377815"
       },
       "source": [
+        "#@title What is entropy? TED-Ed\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/YM-uykVfq_E\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -240,9 +241,11 @@
           "height": 336
         },
         "id": "l9yfLR5LBhF4",
+        "cellView": "form",
         "outputId": "c44f69f6-f56e-4d3c-d491-b1b44e7f2249"
       },
       "source": [
+        "#@title Entropy via MIT\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/o_PmWaW-JNE\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -350,9 +353,11 @@
           "height": 336
         },
         "id": "J_yOxYq4g8i0",
+        "cellView": "form",
         "outputId": "dd83e68e-35f7-40b3-9c1a-3069c602cd6e"
       },
       "source": [
+        "#@title What is Entropy? The Good Stuff\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/gS_C7dM25pc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -382,10 +387,11 @@
           "height": 336
         },
         "id": "myLbOQpraqyB",
+        "cellView": "form",
         "outputId": "16d182dd-9c09-400c-ede9-bbdd80092044"
       },
       "source": [
-        "#@title https://www.youtube.com/watch?v=yKbJ9leUNDE&list=PLoaVOjvkzQtyZF-2VpJrxPz7bxK_p1Dd2\n",
+        "#@title Why Doesn't Time Flow Backwards?\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/yKbJ9leUNDE\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -415,9 +421,11 @@
           "height": 336
         },
         "id": "3XhxhX9kaWVj",
+        "cellView": "form",
         "outputId": "f422fe3b-0817-4f79-d2e4-b445120e4817"
       },
       "source": [
+        "#@title Entropy MIT OCW\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/870y6GUKbwc\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -454,7 +462,7 @@
         "id": "gduHRTzbjB_A"
       },
       "source": [
-        "## 例題2の改まった解説"
+        "## 例題4の改まった解説"
       ]
     },
     {
