clean up after lecture

--- a/11_Nov/1506_熱力学的現象の進む方向.ipynb
+++ b/11_Nov/1506_熱力学的現象の進む方向.ipynb
@@ -6,8 +6,6 @@
       "name": "1506_熱力学的現象の進む方向.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOceRYDW87T720g61PaMwsL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +50,11 @@
           "height": 336
         },
         "id": "xhm9AHaEi63T",
+        "cellView": "form",
         "outputId": "d163200a-b9fa-4657-9753-002e9b07a8ae"
       },
       "source": [
+        "#@title A law of Nature\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/WTtxlaeC9PY\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
