add more video clips before lecture

--- a/01_Jan/1103_揚力.ipynb
+++ b/01_Jan/1103_揚力.ipynb
@@ -6,7 +6,7 @@
       "name": "1103_揚力",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOayy5d9Y+HMrKvHdZvYOTi",
+      "authorship_tag": "ABX9TyNSAC2xBa/Fia1kVxcUJhew",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,7 +69,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UqBmdZ-BNig\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -122,7 +122,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ekY1PWYp-n0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -149,29 +149,26 @@
         },
         "id": "LvKf6_TLFsAH",
         "cellView": "form",
-        "outputId": "0f555ba5-57d7-44d7-abad-b508c6065d28"
+        "outputId": "1c842e33-138f-4f6d-85ca-d08f4002f7be"
       },
       "source": [
-        "#@title 翼の渦 3:18\n",
-        "#@markdown 下記のリンクへ進み、3:18から 一分間動画を確認してください\n",
+        "#@title 翼の渦\n",
         "%%html\n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/3_WgkVQWtno\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/rCpZpKZLz14?start=227\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/3_WgkVQWtno\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/rCpZpKZLz14?start=227\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
@@ -249,29 +246,26 @@
         },
         "id": "hv6LSonpGSfx",
         "cellView": "form",
-        "outputId": "80e3852b-2caf-4a0f-e9f6-e8e1c713dcf1"
+        "outputId": "41c20c50-ae43-4f0e-aff5-6076c501db00"
       },
       "source": [
         "#@title 実験: 迎え角の影響\n",
-        "#@markdown 下記のリンクへ進み、1:26から 30秒間動画を確認してください\n",
         "%%html\n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/dUhiDctsyfs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/SiOiVHUEYao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/dUhiDctsyfs\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/SiOiVHUEYao\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     }
