clean up after lecture

--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "1104_粘性抵抗と慣性抵抗",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMlcH4hgkkgoTaaiSfkdTvA",
+      "authorship_tag": "ABX9TyNCDD/zbyoHl+hq39o2/Qgn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,37 +54,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rcnfPBOjCi_K",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 336
-        },
-        "cellView": "form",
-        "outputId": "a61a60a1-df14-4b10-9613-1ea0163e88b4"
+        "id": "rcnfPBOjCi_K"
       },
       "source": [
         "#@title 粘性力の確認\n",
-        "#@markdown マイクをoff にして、各自の環境で下記の動画を確認して下さい。\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UVcyea3ZH54\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UVcyea3ZH54\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -100,21 +77,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 336
         },
         "id": "7tK2uHgaLl0M",
-        "outputId": "fe7089cb-0374-4375-8655-b29fdd88b962"
+        "cellView": "form",
+        "outputId": "ae7fbdfc-5ed9-43a0-b9f3-294e4a22bc8b"
       },
       "source": [
         "#@title 実験: 滑りなし条件の確認\n",
-        "#@markdown 底に付着した顔料が、丈夫の流れに対して動いていないことを確認して下さい。\n",
+        "#@markdown 底に付着した顔料が、上部の流れに対して動いていないことを確認して下さい。\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/cUTkqZeiMow\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -126,9 +103,7 @@
               "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
