--- a/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
+++ b/01_Jan/1104_粘性抵抗と慣性抵抗.ipynb
@@ -54,15 +54,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rcnfPBOjCi_K"
+        "id": "rcnfPBOjCi_K",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 336
+        },
+        "cellView": "form",
+        "outputId": "ab659432-7cc9-4da4-849d-2e786bee70cf"
       },
       "source": [
         "#@title 粘性力の確認\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UVcyea3ZH54\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/UVcyea3ZH54\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
