fixed size of pictures

--- a/11_Nov/1504_熱機関とその効率.ipynb
+++ b/11_Nov/1504_熱機関とその効率.ipynb
@@ -201,7 +201,7 @@
         "これらを踏まえると\n",
         "> 元の熱源から得られた熱量 $Q_2$ が, どれだけ外部への仕事として取り出されたか?\n",
         "\n",
-        "という割合を熱効率 $\\eta$ として定義できる. \n",
+        "という割合を熱効率 $\\eta$ として定義できる.\n",
         ">> 熱効率 $\\eta$ = (外部にした正味の仕事)/(高温熱源から吸収した熱量)\n",
         "\n",
         ">> \\begin{align*}\n",
@@ -218,7 +218,7 @@
         "\n",
         "---\n",
         "教科書に合わせるなら\n",
-        "> $Q_{\\rm H}=Q_2, Q_{\\rm L}=Q_2,$ \n",
+        "> $Q_{\\rm H}=Q_2, Q_{\\rm L}=Q_2,$\n",
         "\n",
         "と読み替えて下さい."
       ]
@@ -315,7 +315,7 @@
         "  - 閉じ込められた気体は、(単原子)理想気体\n",
         "- 正サイクル:: A $\\to$ B $\\to$ C $\\to$ D ($\\to$ A)\n",
         "  - 熱力学第一法則を利用\n",
-        "- 系(ABCDで囲まれた領域)に対して, \n",
+        "- 系(ABCDで囲まれた領域)に対して,\n",
         "    - 時計回りを 正\n",
         "\n"
       ]
@@ -431,7 +431,7 @@
       "source": [
         "\\begin{align*}\n",
         "\\Delta Q _{\\rm 1} &= \\Delta W_{\\rm CD}= {n} \\cdot R T_{\\rm L} \\ln \\dfrac{V_D}{V_C} < 0\\\\\n",
-        "- Q_{\\rm L} &= W_3 = \\cancelto{1}{n} \\cdot R T_{\\rm L} \\ln \\dfrac{V_4}{V_3} \n",
+        "- Q_{\\rm L} &= W_3 = \\cancelto{1}{n} \\cdot R T_{\\rm L} \\ln \\dfrac{V_4}{V_3}\n",
         "\\end{align*}"
       ]
     },
@@ -511,7 +511,7 @@
         "W_3&= -Q_{\\rm L}= RT_{\\rm L} \\ln \\dfrac{V_4}{V_3} = - RT_{\\rm L} \\ln \\dfrac{V_2}{V_1}  \\\\\n",
         "W_4&= U(T_{L}) - U(T_{H})\n",
         "\\end{cases}\\\\\n",
-        "W \n",
+        "W\n",
         "&= \\sum_{1}^{4} W_i = W_1 + W_3 = Q_{\\rm H} + (- Q_{\\rm L})\\\\\n",
         "&= R\\left( T_{\\rm H}  - T_{\\rm L} \\right) \\ln \\dfrac{V_2}{V_1}\n",
         "\\end{align*}\n",
@@ -594,16 +594,16 @@
         "##### カルノー機関の熱効率 $\\eta$\n",
         "\n",
         "\\begin{align*}\n",
-        "\\eta &= \\dfrac{Q_{\\rm H} -Q_{\\rm L}}{Q_{\\rm H}} \n",
+        "\\eta &= \\dfrac{Q_{\\rm H} -Q_{\\rm L}}{Q_{\\rm H}}\n",
         "= \\dfrac{\\cancel{R}\\left( T_{\\rm H}  - T_{\\rm L} \\right) \\bcancel{\\ln \\dfrac{V_2}{V_1}}}\n",
         "{\\cancel{R} T_{\\rm H} \\bcancel{\\ln \\dfrac{V_2}{V_1}}}\n",
         "= \\dfrac{T_{\\rm H} -T_{\\rm L}}{T_{\\rm H}} &\\\\[1mm]\n",
         "%\n",
-        "&=1 - \\dfrac{Q_{\\rm L}}{Q_{\\rm H}} \n",
+        "&=1 - \\dfrac{Q_{\\rm L}}{Q_{\\rm H}}\n",
         "=1 - \\dfrac{T_{\\rm L}}{T_{\\rm H}} \\\\[3mm]\n",
-        "\\dfrac{Q_{\\rm L}}{Q_{\\rm H}} \n",
+        "\\dfrac{Q_{\\rm L}}{Q_{\\rm H}}\n",
         "&=\n",
-        "\\dfrac{T_{\\rm L}}{T_{\\rm H}} \n",
+        "\\dfrac{T_{\\rm L}}{T_{\\rm H}}\n",
         "\\end{align*}\n"
       ]
     },
@@ -731,10 +731,10 @@
       },
       "source": [
         "ガソリンエンジンの基本 ~ 4ストロークエンジン ~ 発明者 Nicolaus Otto  \n",
-        "// 直下の写真は同一人物\n",
         "\n",
-        "![Nicolaus Otto, young](https://upload.wikimedia.org/wikipedia/commons/4/4a/Nikolaus_August_Otto.png)\n",
-        "![Nicolaus Otto, old](https://upload.wikimedia.org/wikipedia/commons/d/df/Nicolaus-August-Otto.jpg)\n",
+        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/4/4a/Nikolaus_August_Otto.png\" alt=\"Nicolaus Otto, young\" width=\"250\">\n",
+        "\n",
+        "<img src=\"https://upload.wikimedia.org/wikipedia/commons/d/df/Nicolaus-August-Otto.jpg\" alt=\"Nicolaus Otto, old\" width=\"200\">\n",
         "\n",
         "![Four-stroke engine](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/PSM_V18_D500_An_american_internal_combustion_otto_engine.jpg/640px-PSM_V18_D500_An_american_internal_combustion_otto_engine.jpg)\n"
       ]
@@ -1001,7 +1001,7 @@
         "\\begin{align*}\n",
         "\\begin{cases}\n",
         "T_{\\rm A} V_{\\rm A} ^{\\gamma -1} &= T_{\\rm B} V_{\\rm B} ^{\\gamma -1}&\\\\\n",
-        "T_{\\rm C} V_{\\rm \\cancelto{B}{C}} ^{\\gamma -1} \n",
+        "T_{\\rm C} V_{\\rm \\cancelto{B}{C}} ^{\\gamma -1}\n",
         "&= T_{\\rm D} V_{\\rm \\cancelto{A}{D}} ^{\\gamma -1},&\n",
         "\\end{cases}\\\\\n",
         "\\begin{cases}\n",
@@ -1023,7 +1023,7 @@
         "\\left( T_{\\rm D} - T_{\\rm A} \\right) V_{\\rm A} ^{\\gamma -1}\n",
         "&=\n",
         "\\left( T_{\\rm C} - T_{\\rm B} \\right) V_{\\rm B} ^{\\gamma -1}&\\\\\n",
-        "\\left(\\dfrac{V_{\\rm B}}{V_{\\rm A}}\\right)^{\\gamma-1} \n",
+        "\\left(\\dfrac{V_{\\rm B}}{V_{\\rm A}}\\right)^{\\gamma-1}\n",
         "&= \\dfrac{T_{\\rm D} - T_{\\rm A}}{T_{\\rm C} - T_{\\rm B}}&\n",
         "\\end{align*}"
       ]
@@ -1112,7 +1112,7 @@
       "source": [
         "与えた仕事 $W$で, 熱量 $Q_1=Q_{\\rm L}$ 熱を吸い上げるのが目的なので, 性能効率は\n",
         "\\begin{align}\n",
-        "\\dfrac{Q_{\\rm L}}{W} = \\dfrac{Q_{\\rm L}}{Q_{\\rm H} -Q_{\\rm L}} \n",
+        "\\dfrac{Q_{\\rm L}}{W} = \\dfrac{Q_{\\rm L}}{Q_{\\rm H} -Q_{\\rm L}}\n",
         "\\leqq \\dfrac{T_{\\rm L}}{T_{\\rm H}-T_{\\rm L}}\n",
         "\\end{align}\n"
       ]
@@ -1169,7 +1169,7 @@
       },
       "source": [
         "\\begin{align}\n",
-        "\\dfrac{Q_{\\rm H}}{Q_{\\rm L}} \n",
+        "\\dfrac{Q_{\\rm H}}{Q_{\\rm L}}\n",
         "&= \\dfrac{Q_{\\rm H}(T_{\\rm H})}{Q_{\\rm L}(T_{\\rm L})}\n",
         "= \\dfrac{f(T_{\\rm H},T_0)}{f(T_{\\rm L},T_0)}\n",
         "= \\dfrac{\\theta(T_{\\rm H})/\\theta(T_0)}{\\theta(T_{\\rm L})/\\theta(T_0)}\n",
