fixed a youtube link.

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOjSHEFdowuJnKTtVP05tMw",
+      "authorship_tag": "ABX9TyN0tk1BM1BvI81biv2eIJsb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,9 +81,7 @@
       "metadata": {
         "id": "Q2cHpFHO9wZr"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -520,7 +518,7 @@
         "%%html\n",
         "<iframe src=\"https://phet.colorado.edu/sims/html/states-of-matter/latest/states-of-matter_en.html\" width=\"600\" height=\"450\" scrolling=\"no\" allowfullscreen></iframe>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -670,7 +668,7 @@
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/ZbZjo7zhWFk\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -690,28 +688,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "G--uoKyzQD3P",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 337
         },
-        "outputId": "b543a989-f9ea-47c1-8ecc-018b573edfd4"
+        "outputId": "d9921865-b28c-40b0-fcac-5cc0e24e1388"
       },
       "source": [
         "#@title 仕事等量の測定: 英国人ジュールが用いた手法\n",
         "%%html\n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MBrTDKc9YZ0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/oP5ET5uxPow?si=vqXPTK0gJqBE88-8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/MBrTDKc9YZ0\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/oP5ET5uxPow?si=vqXPTK0gJqBE88-8\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n"
             ]
           },
           "metadata": {}
@@ -740,7 +737,7 @@
         "\n",
         "---\n",
         "\n",
-        "[Calorie](https://en.wikipedia.org/wiki/Calorie), https://doi.org/10.1351/pac196408020095 "
+        "[Calorie](https://en.wikipedia.org/wiki/Calorie), https://doi.org/10.1351/pac196408020095"
       ]
     },
     {
@@ -794,7 +791,7 @@
       },
       "source": [
         "物体の質量によって, 内部エネルギーを分担する原子や分子の数が増えるため, 熱容量 $C$ は\n",
-        "質量に比例します. \n",
+        "質量に比例します.\n",
         "\n",
         "注目する物質の質量を $m$ g とすると, 単位グラムあたりの熱容量 $c$ は\n",
         "\\begin{align*}\n",
@@ -915,7 +912,7 @@
         "outputId": "486bf073-0f0c-4c81-91b7-0fb558428d1e"
       },
       "source": [
-        "#@title \n",
+        "#@title\n",
         "%%html\n",
         "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/2L8dWMX8u3o\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
       ],
@@ -1135,8 +1132,8 @@
         "薄い正方形の金属片を用意し, 思考実験を行うと\n",
         "\\begin{align*}\n",
         "S \\cdot 1 &=L\\cdot L \\cdot 1\n",
-        "= (L_0 + \\alpha L_0 \\Delta T)^2 \\cdot 1 \n",
-        "= L_0^2 (1 + \\alpha \\Delta T)^2 \\cdot \n",
+        "= (L_0 + \\alpha L_0 \\Delta T)^2 \\cdot 1\n",
+        "= L_0^2 (1 + \\alpha \\Delta T)^2 \\cdot\n",
         "\\approx  L_0^2 (1 + 2 \\alpha \\Delta T) \\cdot 1 &\\\\\n",
         "&=  S_0 + 2\\alpha S_0 \\Delta T&\\\\\n",
         "\\Delta S \\cdot 1 &=  (2 \\alpha) S_0 \\Delta T \\cdot 1.&\\\\\n",
