update links and  cels

--- a/10_Oct/1401_熱と温度.ipynb
+++ b/10_Oct/1401_熱と温度.ipynb
@@ -6,7 +6,7 @@
       "name": "1401_熱と温度",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0tk1BM1BvI81biv2eIJsb",
+      "authorship_tag": "ABX9TyP89avFA+bE6r/G7MyAyCyT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,15 +75,6 @@
       "source": [
         "### 熱平衡と温度"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Q2cHpFHO9wZr"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -688,6 +679,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "G--uoKyzQD3P",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
@@ -952,30 +944,28 @@
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 336
+          "height": 337
         },
-        "outputId": "6c8f0073-9976-4708-f047-66626ac9382e"
+        "outputId": "4511c712-70ad-4768-80bd-35f190941b81"
       },
       "source": [
         "#@title 軌条の熱膨張\n",
         "%%html\n",
-        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/jJeiYaSFCf0\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
+        "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/_TWsHQ45Yd0?si=D1hUUH6B2ZdvM8hf\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/jJeiYaSFCf0\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
-            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/_TWsHQ45Yd0?si=D1hUUH6B2ZdvM8hf\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" referrerpolicy=\"strict-origin-when-cross-origin\" allowfullscreen></iframe>\n"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     },
